# clean-architectures-in-python

./: .gitignore  pyproject.toml
application/domain/: __init__.py  base.py  brand.py
application/types/: __init__.py  slug.py
application/utils/: __init__.py  slugify.py
tests/domain/: test_brand.py
