[project]
name = "clean-architectures-in-python"
version = "1.0.0"
description = "A sample project for implementing clean architecture in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy[cli]>=1.4.5",
    "asyncpg>=0.30.0",
    "litestar[jwt,pydantic,standard]>=2.16.0",
    "mypy>=1.11",
]

[tool.mypy]
plugins = ['pydantic.mypy']
